# PPP3-Exercises

./: .gitignore  .gitmodules  CMakeLists.txt  definitions.txt  lifesaver_vim_shortcuts.txt  readable_code.txt  readme.md  terminal_commands.txt  try_this01  try_this01.cpp
Chapter01/: compiler_error  endl_test  exercise01.cpp  hello_world.cpp
Chapter02/: a.out  arithmetic  arithmetic.cpp  comparators.cpp  comparators_float  comparators_float.cpp  comparators_ints  concatenation  concatenation.cpp  conversions  conversions.cpp  distance_converter  distance_converter.cpp  drill.cpp  drill_letter  example01.cpp  first_name  illegal_names.cpp  int_sequence  int_sequence.cpp  keyword_error  keyword_error.cpp  name_age  name_age.cpp  repeated_words  repeated_words.cpp  string_sequence  string_sequence.cpp  type_safety  type_safety.cpp
Chapter03/: bleep  bleep.cpp  currency_convertor  currency_convertor.cpp  drill  drill.cpp  drill_final  drill_step5  drill_step5.cpp  for_counter  for_counter.cpp  inch_cm_converter.cpp  inch_to_cm_converter  review.txt  while_counter  while_counter.cpp
Chapter04/: celcius_farenheit  celcius_farenheit.cpp  drill.cpp  quadratic_equation  quadratic_equation.cpp  review.txt
Chapter05/: calculator.cpp  calculator00.cpp  calculator01  calculator01.cpp  drill  drill.cpp  pseudocode  pseudocode.cpp  pseudocode_expanded  review.txt  tokens.cpp
Chapter06/: drill  drill.cpp  review.txt  test  testing_calc.cpp  variables.cpp  variables_sloppy
Chapter07/: drill.cpp  drill2.cpp  drill2_test  foo.cpp  foo.h  my_drill  my_module.cppm  review.txt  uglycode.cpp  use.cpp
Chapter08/: date.cpp  drill  review.txt  try_this_01  try_this_02
Chapter09/: Try_This01  Try_This01.cpp  Try_This02  Try_This02.cpp  decimal_to_hex.cpp  drill  drill.cpp  drill05  drill08  drill09  drill10  mydata.txt  review.txt  test-output.cpp
Chapter10/: review.txt
Chapter11/: review.txt
Chapter12/: review.txt
Chapter13/: drill02.cpp  review.txt
Chapter14/: readme.txt  review.txt
Chapter15/: Pointer_Test  Pointer_Test01  drill  drill.cpp  drill02  drill02.cpp  heap.cpp  heap01  linked_list  linked_list.cpp  review.txt  vector02  (+6 more)
qt_creator/: CMakeLists.txt  Chapter11_Drill.cpp  Chapter12_Drill.cpp  Chapter13.cpp  example01.cpp  example02.cpp
(+122 files in other folders)
